# manus-python-sdk

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-gh.yml  test-actions.yml
docs/: API_COVERAGE.md  CODECOV_SETUP.md
examples/: async_example.py  basic_usage.py  chat_completion.py  file_upload.py  projects.py  streaming.py  webhooks.py
scripts/: publish-github-packages.sh
src/manus/: __init__.py  _streaming.py  _types.py  _utils.py  _version.py  async_client.py  client.py  exceptions.py  pagination.py
src/manus/resources/: __init__.py  chat.py  files.py  models.py  projects.py  webhooks.py
tests/: conftest.py  test_async_client.py  test_client.py  test_models.py
