[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manus-sdk"
version = "0.1.0"
description = "The official Python SDK for Manus AI - Integrate AI agents into your workflows"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Manus AI", email = "support@manus.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.100.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]
all = [
    "manus-sdk[openai]",
    "manus-sdk[dev]",
]

[project.urls]
Homepage = "https://github.com/manus-ai/manus-python-sdk"
Documentation = "https://github.com/manus-ai/manus-python-sdk#readme"
Repository = "https://github.com/manus-ai/manus-python-sdk"
Issues = "https://github.com/manus-ai/manus-python-sdk/issues"
Changelog = "https://github.com/manus-ai/manus-python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/manus"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["manus"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/manus"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
